# MdnsdTest

./: CMakeLists.txt  LICENSE  README.md
build.android/jni/: Android.mk  Application.mk
mdnsresponder/: Android.mk
mdnsresponder/mDNSPosix/objects/prod/: dnsextd_parser.c  dnsextd_parser.h
src/: CMakeLists.txt  test.c
src/CtBonjour/src/: CtBonjour.c  CtBonjour.h
src/CtCommon/: CMakeLists.txt  README.md
src/CtCommon/src/: CMakeLists.txt  ct_api.h  ct_common.h  ct_define.h  ct_log.h  ct_log_print.c  ct_log_print.h  ct_ret.c  ct_ret.h  ct_time.c  ct_time.h  ct_typedef.h
src/CtCommon/test/: CMakeLists.txt  test_log.c  test_ret.c
src/CtMemory/src/: ct_memory.c  ct_memory.h
src/CtSocket/src/: CtSelector.c  CtSelector.h  CtSocketIpc.c  CtSocketIpc.h  ct_socket.c  ct_socket.h
src/CtThread/src/: CtCondition.c  CtCondition.h  CtMutex.c  CtMutex.h  CtSemaphore.c  CtSemaphore.h  CtThread.c  CtThread.h
src/CtTimer/src/: CtTimer.c  CtTimer.h
src/CtUuid/src/: CtUuid.c  CtUuid.h
src/test/: CMakeLists.txt  command.c  command.h  test.c
